--- a/requirements.txt
+++ b/requirements.txt
@@ -1,202 +1,4 @@
-absl-py==2.1.0
-addict==2.4.0
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
-aiosignal==1.3.2
-altair==5.1.1
-annotated-types==0.7.0
-anyio==4.4.0
-appnope==0.1.3
-asttokens==2.4.0
-attrs==23.1.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-blinker==1.6.2
-blis==1.2.0
-cachetools==5.3.1
-catalogue==2.0.10
-certifi==2023.7.22
-cffi==1.17.1
-charset-normalizer==3.2.0
-click==8.1.7
-cloudpathlib==0.20.0
-comm==0.1.4
-confection==0.1.5
-ConfigArgParse==1.7
-contourpy==1.1.0
-cycler==0.11.0
-cymem==2.0.11
-dash==2.18.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-debugpy==1.7.0
-decorator==5.1.1
-distro==1.9.0
-dnspython==2.7.0
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-executing==1.2.0
-Faker==19.3.1
-fastjsonschema==2.21.1
-favicon==0.7.0
-Flask==3.0.0
-Flask-Cors==4.0.1
-flatbuffers==24.12.23
-fonttools==4.42.1
-frozenlist==1.5.0
-fuzzywuzzy==0.18.0
-genai==2.1.0
-gitdb==4.0.10
-GitPython==3.1.33
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.1
-google-api-python-client==2.161.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-cloud-vision==3.10.0
-google-generativeai==0.8.4
-googleapis-common-protos==1.68.0
-grpcio==1.73.0rc1
-grpcio-status==1.70.0
-h11==0.14.0
-htbuilder==0.6.1
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.0
-idna==3.4
-importlib-metadata==6.8.0
-influxdb==5.3.1
-influxdb-client==1.38.0
-ipykernel==6.25.2
-ipython==8.15.0
-itsdangerous==2.1.2
-jax==0.4.38
-jaxlib==0.4.38
-jedi==0.19.0
-Jinja2==3.1.2
-joblib==1.4.2
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-kiwisolver==1.4.5
-langcodes==3.5.0
-language_data==1.3.0
-lxml==4.9.3
-marisa-trie==1.2.1
-Markdown==3.4.4
-markdown-it-py==3.0.0
-markdownlit==0.0.7
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mediapipe==0.10.20
-ml_dtypes==0.5.1
-more-itertools==10.1.0
-msgpack==1.0.5
-multidict==6.1.0
-murmurhash==1.0.12
-nbformat==5.10.4
-nest-asyncio==1.5.7
-numpy==1.25.2
-open3d==0.19.0
-openai==0.27.10
-opencv-contrib-python==4.10.0.84
-opencv-python==4.8.0.76
-opt_einsum==3.4.0
-packaging==23.1
-pandas==2.1.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.10.0
-plotly==5.16.1
-preshed==3.0.9
-prompt-toolkit==3.0.39
-propcache==0.3.0
-proto-plus==1.26.0
-protobuf==5.29.3
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==13.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-pydeck==0.8.0
-Pygments==2.16.1
-pymdown-extensions==10.3
-pymongo==4.13.0
-Pympler==1.0.1
-pyparsing==3.0.9
-pyquaternion==0.9.9
-pytesseract==0.3.13
-python-dateutil==2.8.2
-python-dotenv==1.1.0
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0.1
-pyzmq==25.1.1
-reactivex==4.0.4
-referencing==0.30.2
-regex==2024.11.6
-requests==2.31.0
-retrying==1.3.4
-rich==13.5.2
-rpds-py==0.10.0
-rsa==4.9
-scikit-learn==1.6.1
-scipy==1.15.1
-sentencepiece==0.2.0
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.1.0
-smmap==5.0.0
-sniffio==1.3.1
-sounddevice==0.5.1
-soupsieve==2.5
-spacy==3.8.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.5.1
-st-annotated-text==4.0.0
-stack-data==0.6.2
-streamlit==1.26.0
-streamlit-camera-input-live==0.2.0
-streamlit-card==0.0.61
-streamlit-embedcode==0.1.2
-streamlit-extras==0.3.0
-streamlit-faker==0.0.2
-streamlit-image-coordinates==0.1.6
-streamlit-keyup==0.2.0
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==1.0.2
-tabulate==0.9.0
-tenacity==8.2.3
-tesseract==0.1.3
-thinc==8.3.4
-threadpoolctl==3.5.0
-tiktoken==0.3.3
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.3
-tqdm==4.66.4
-traitlets==5.9.0
-typer==0.15.1
-typing_extensions==4.7.1
-tzdata==2023.3
-tzlocal==4.3.1
-uritemplate==4.1.1
-urllib3==2.0.4
-validators==0.21.2
-wasabi==1.1.3
-wcwidth==0.2.6
-weasel==0.4.1
-Werkzeug==3.0.1
-wrapt==1.17.2
-yarl==1.18.3
-zipp==3.16.2
+Flask
+gunicorn
+flask-cors
+google-generativeai
